--- a/data_base/package.json
+++ b/data_base/package.json
@@ -8,8 +8,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "mysql2": "^3.11.3"
-  }
+  },
+  "description": ""
 }
