--- a/data_base/package.json
+++ b/data_base/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "mysql2": "^3.11.3"
   },
   "description": ""
